RESOLVED FIXED13353
REGRESSION (r20754-20766): Textarea does not resize when scrollbar is present
https://bugs.webkit.org/show_bug.cgi?id=13353
Summary REGRESSION (r20754-20766): Textarea does not resize when scrollbar is present
Matt Lilek
Reported 2007-04-15 11:09:32 PDT
Textareas will not resize if there's enough content for it to have a scrollbar. Regressed between r20754 and r20766 with http://trac.webkit.org/projects/webkit/changeset/20761 and http://trac.webkit.org/projects/webkit/changeset/20766 looking like the only changes that could have caused it.
Attachments
Fix overflow controls hit testing (45.67 KB, patch)
2007-04-20 09:18 PDT, mitz
darin: review+
mitz
Comment 1 2007-04-20 09:18:21 PDT
Created attachment 14111 [details] Fix overflow controls hit testing
Darin Adler
Comment 2 2007-04-20 10:01:37 PDT
Comment on attachment 14111 [details] Fix overflow controls hit testing Possible future improvement: + IntRect vBarRect(absBounds.right() - renderer()->borderRight() - m_vBar->width(), absBounds.y() + renderer()->borderTop(), m_vBar->width(), absBounds.height() - (renderer()->borderTop() + renderer()->borderBottom()) - (m_hBar ? m_hBar->height() : resizeControlSize)); This line is very long. Maybe use some additional local variables or a helper function. Same with h-bar. r=me
Mark Rowe (bdash)
Comment 3 2007-04-21 01:41:00 PDT
Landed in r20995.
Note You need to log in before you can comment on or make changes to this bug.