WebCore/rendering/RenderListBox.h
@@ -56,7 +56,7 @@ public:
     virtual void paintObject(PaintInfo&, int tx, int ty);
     virtual IntRect controlClipRect(int tx, int ty) const;
 
-    virtual bool isPointInScrollbar(HitTestResult&, int x, int y, int tx, int ty);
+    virtual bool isPointInOverflowControl(HitTestResult&, int x, int y, int tx, int ty);
 
     virtual bool scroll(ScrollDirection, ScrollGranularity, float multiplier = 1.0f);
     virtual bool isScrollable() const;
